# diffusion

./: CMakeLists.txt  README.md  format-code.sh
docs/: backend.md  build.md  chroma.md  distilled_sd.md  docker.md  ernie_image.md  flux.md  hipBLAS_on_Windows.md  kontext.md  performance.md  pid.md  z_image.md
examples/cli/: CMakeLists.txt  main.cpp
examples/common/: common.cpp  common.h  log.h  media_io.cpp  media_io.h  resource_owners.hpp
examples/server/: CMakeLists.txt  README.md  api.md  main.cpp  runtime.h
include/: gguf-diffusion.h
src/: convert.cpp  gguf-diffusion.cpp  model.cpp  upscaler.cpp  upscaler.h  version.cpp
src/conditioning/: conditioner.hpp
src/core/: ggml_extend_backend.cpp  util.cpp  util.h
src/model/te/: t5.hpp
src/tokenizers/vocab/: clip_merges.hpp
